processed/jira/txt/LU/LU-17947.txt
Key:        LU-17947
Summary:    LASSERTF [-Werror=format=] failure
Link:       https://jira.whamcloud.com/browse/LU-17947
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Jian Yu
Reporter:   Jian Yu
Created:    Wed, 12 Jun 2024 22:09:24 +0000
Updated:    Tue, 25 Jun 2024 06:39:41 +0000
Resolved:   Tue, 25 Jun 2024 06:39:41 +0000

--- Description ---
While building Ubuntu 24.04 on master branch, it failed as follows:

/root/lustre-release/lustre/ptlrpc/wiretest.c: In function 'lustre_assert_wire_constants':
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2718:9: note: in expansion of macro 'LASSERTF'
 2718 |         LASSERTF(MDS_FMODE_CLOSED == 000000000000UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2720:9: note: in expansion of macro 'LASSERTF'
 2720 |         LASSERTF(MDS_FMODE_EXEC == 000000000004UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2722:9: note: in expansion of macro 'LASSERTF'
 2722 |         LASSERTF(MDS_OPEN_CREATED == 000000000010UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2724:9: note: in expansion of macro 'LASSERTF'
 2724 |         LASSERTF(MDS_OPEN_CREAT == 000000000100UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2726:9: note: in expansion of macro 'LASSERTF'
 2726 |         LASSERTF(MDS_OPEN_EXCL == 000000000200UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2728:9: note: in expansion of macro 'LASSERTF'
 2728 |         LASSERTF(MDS_OPEN_TRUNC == 000000001000UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2730:9: note: in expansion of macro 'LASSERTF'
 2730 |         LASSERTF(MDS_OPEN_APPEND == 000000002000UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2732:9: note: in expansion of macro 'LASSERTF'
 2732 |         LASSERTF(MDS_OPEN_SYNC == 000000010000UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2734:9: note: in expansion of macro 'LASSERTF'
 2734 |         LASSERTF(MDS_OPEN_DIRECTORY == 000000200000UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2736:9: note: in expansion of macro 'LASSERTF'
 2736 |         LASSERTF(MDS_OPEN_BY_FID == 000040000000UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2738:9: note: in expansion of macro 'LASSERTF'
 2738 |         LASSERTF(MDS_OPEN_DELAY_CREATE == 000100000000UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2740:9: note: in expansion of macro 'LASSERTF'
 2740 |         LASSERTF(MDS_OPEN_OWNEROVERRIDE == 000200000000UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2742:9: note: in expansion of macro 'LASSERTF'
 2742 |         LASSERTF(MDS_OPEN_LOCK == 004000000000UL, "found 0%.11oUL\n",
      |         ^~~~~~~~
/root/lustre-release/libcfs/include/libcfs/libcfs_private.h:89:34: error: format '%o' expects argument of type 'unsigned int', but argument 4 has type 'long unsigned int' [-Werror=format=]
   89 |                                  "ASSERTION( %s ) failed: " fmt, #cond, \
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
/root/lustre-release/lustre/ptlrpc/wiretest.c:2744:9: note: in expansion of macro 'LASSERTF'
 2744 |         LASSERTF(MDS_OPEN_HAS_EA == 010000000000UL, "found 0%.11oUL\n",
      |         ^~~~~~~~

--- Comment (yujian, Tue, 25 Jun 2024 06:39:41 +0000) ---
Landed for Lustre 2.16.0.

--- Comment (gerrit, Tue, 25 Jun 2024 03:33:06 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/55415/

Subject: LU-17947 build: fix LASSERTF [-Werror=format=] failure

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 1f90d81bf9612ded9eb980e99bcd7c89bfc779c3

--- Comment (gerrit, Wed, 12 Jun 2024 22:33:19 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/55415

Subject: LU-17947 build: fix LASSERTF [-Werror=format=] failure

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 6a12f8f253ce3623dc756bc53e84166422c9e5e9
